
2017-12-24  Edward Hart <edward.dan.hart@gmail.com>

	* config.def, config.c, field.c: added screen-section-clauses option to
	  set rules for SCREEN SECTION item clauses.
	* field.c: removed "alphanumeric value is expected" warning when using
	  numeric VALUEs in the SCREEN SECTION.

2017-12-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.h, parser.y (begin_implicit_statement), codegen.c (output_stmt):
	  fixed duplicated trace code generation for implicit statements

2017-12-22  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_attr): set flag COB_FLAG_IS_FP for all FLOAT types

2017-12-21  Ron Norman <rjn@inglenet.com>

	* codegen.c: For REPORT pass CODE value to report structure
	* parser.y: pass back CODE value

2017-12-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l (read_literal): fix endless loop on invalid literals for
	  systems that define EOF as -1

2017-12-15  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: adding/removing a register now removes the reserved word
	  with the same name (if it exists) (feature request #278).
	* cobc.c (cobc_print_usage): added help text for -f(not-)register.

2017-12-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line) [_MSC_VER]: check if -l was specified
	  including ".lib" before adding it
	* cobc.c (process_filename): don't allocate and set fn->object for
	  most used cb_compile_level == CB_LEVEL_MODULE as it is is compiled
	  without intermediate object file
	* reserved.c (function_list): corrected number of parameters according
	  to all other checked implementations and the Programmer's Guide
	  (PRESENT-VALUE min 1->2, RANDOM max unlimited->1)

2017-12-13  Edward Hart <edward.dan.hart@gmail.com>

	* tree.h: renamed special_index to index_type and replaced magic
	  constants with (cb_index_type) enum.

2017-12-12  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (rep_name_list): handle case where $1 == cb_error_node